--- a/qemu/Makefile.target
+++ b/qemu/Makefile.target
@@ -452,7 +452,6 @@ ifdef CONFIG_S2E
 $(call set-vpath, $(SRC_PATH))
 
 s2eobj-arm-y = 
-s2eobj-arm-y += s2e/Plugins/BaseInstructionsArm.o
 
 s2eobj-i386-y =
 s2eobj-i386-y += s2e/Plugins/CodeSelector.o
@@ -461,7 +460,6 @@ s2eobj-i386-y += s2e/Plugins/FunctionMonitor.o
 s2eobj-i386-y += s2e/Plugins/StackMonitor.o
 s2eobj-i386-y += s2e/Plugins/LibraryCallMonitor.o
 s2eobj-i386-y += s2e/Plugins/InterruptInjector.o
-s2eobj-i386-y += s2e/Plugins/BaseInstructions.o
 s2eobj-i386-y += s2e/Plugins/X86ExceptionInterceptor.o
 s2eobj-i386-y += s2e/Plugins/HostFiles.o
 s2eobj-i386-y += s2e/Plugins/Searchers/CooperativeSearcher.o
@@ -494,6 +492,7 @@ s2eobj-win-y += s2e/Plugins/WindowsApi/WindowsDriverExerciser.o
 #s2eobj-y = s2e/Base.o
 s2eobj-y =
 s2eobj-y += s2e/Signals/signals.o
+s2eobj-y += s2e/Plugins/BaseInstructions.o
 s2eobj-y += s2e/Plugin.o s2e/Plugins/CorePlugin.o s2e/Plugins/Example.o
 #s2eobj-y += s2e/Plugins/PluginInterface.o
 s2eobj-y += s2e/Plugins/ConsistencyModels.o
