--- a/qemu/Makefile.target
+++ b/qemu/Makefile.target
@@ -508,6 +508,8 @@ s2eobj-y += s2e/Plugins/CacheSim.o
 
 s2eobj-y += s2e/Plugins/ExecutionStatisticsCollector.o
 
+s2eobj-y += s2e/Plugins/MemoryMonitor.o
+
 #sqlite database is deprecated now
 #s2eobj-y += s2e/sqlite3.o
 #s2eobj-y += s2e/Database.o
