--- a/qemu/Makefile.target
+++ b/qemu/Makefile.target
@@ -510,7 +510,7 @@ s2eobj-y += s2e/Plugins/ExecutionStatisticsCollector.o
 
 s2eobj-y += s2e/Plugins/MemoryMonitor.o
 s2eobj-y += s2e/Plugins/Initializer.o
-#s2eobj-y += s2e/Plugins/MemInjector2.o
+s2eobj-y += s2e/Plugins/MemInjector2.o
 
 #sqlite database is deprecated now
 #s2eobj-y += s2e/sqlite3.o
