--- a/qemu/Makefile.target
+++ b/qemu/Makefile.target
@@ -511,6 +511,7 @@ s2eobj-y += s2e/Plugins/ExecutionStatisticsCollector.o
 s2eobj-y += s2e/Plugins/MemoryMonitor.o
 s2eobj-y += s2e/Plugins/Initializer.o
 s2eobj-y += s2e/Plugins/MemInjector2.o
+s2eobj-y += s2e/Plugins/RemoteControl.o
 
 #sqlite database is deprecated now
 #s2eobj-y += s2e/sqlite3.o
