--- a/qemu/Makefile.target
+++ b/qemu/Makefile.target
@@ -516,6 +516,7 @@ s2eobj-y += s2e/Plugins/Initializer.o
 s2eobj-y += s2e/Plugins/MemInjector2.o
 s2eobj-y += s2e/Plugins/RemoteControl.o
 s2eobj-y += s2e/Plugins/RemoteMemory.o
+s2eobj-y += s2e/Plugins/MemoryInterceptorMediator.o
 
 #sqlite database is deprecated now
 #s2eobj-y += s2e/sqlite3.o
