--- a/qemu/Makefile.target
+++ b/qemu/Makefile.target
@@ -455,10 +455,11 @@ ifdef CONFIG_S2E
 $(call set-vpath, $(SRC_PATH))
 
 s2eobj-arm-y = 
+s2eobj-arm-y += s2e/Plugins/ArmFunctionMonitor.o
 
 s2eobj-i386-y =
 s2eobj-i386-y += s2e/Plugins/CodeSelector.o
-s2eobj-i386-y += s2e/Plugins/FunctionMonitor.o
+s2eobj-i386-y += s2e/Plugins/X86FunctionMonitor.o
 s2eobj-i386-y += s2e/Plugins/StackMonitor.o
 s2eobj-i386-y += s2e/Plugins/LibraryCallMonitor.o
 s2eobj-i386-y += s2e/Plugins/InterruptInjector.o
@@ -517,7 +518,6 @@ s2eobj-y += s2e/Plugins/MemInjector2.o
 s2eobj-y += s2e/Plugins/RemoteControl.o
 s2eobj-y += s2e/Plugins/RemoteMemory.o
 s2eobj-y += s2e/Plugins/MemoryInterceptorMediator.o
-s2eobj-y += s2e/Plugins/ArmFunctionMonitor.o
 
 #sqlite database is deprecated now
 #s2eobj-y += s2e/sqlite3.o
